2005-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* file-chooser/gtkfilesystemgnomevfs.c (load_dir): Remove some
	stale code.

2005-12-08  Paolo Borelli  <pborelli@katamail.com>

	* libgnomeui/gnome-entry.c (gnome_entry_save_history): fix list leak.

2005-11-23  Rodney Dawes  <dobey@novell.com>

	* libgnomeui/gnome-icon-lookup.c (make_compat_generic_mime_name): Fix
	typo in use of ICON_NAME_MIME_PREFIX

2005-11-23  Rodney Dawes  <dobey@novell.com>

	* libgnomeui/gnome-icon-lookup.c: Define a suffix for the name spec
	(make_mime_name): Use the straight mime type by default
	(make_generic_mime_name): Use the generic part, with the fallback
	generic suffix "-x-generic" from the name spec
	(make_compat_mime_name): Method for using the compat method on gnome
	for the specific mime type icons
	(make_compat_generic_mime_name): Method for using the compat method
	for the generic type icons
	(gnome_icon_lookup): Add calls to the new compat methods so that we
	don't break backward compatibility with themes that don't follow the
	naming spec yet
	
2005-11-14  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* libgnomeui/gnome-file-entry.c: (gnome_file_entry_get_full_path):
	
	Convert text from entry to filename encoding before
	returning it. Patch from Yydzero <yandong.yao@sun.com>,
	bug #321144.

2005-11-10  Simos Xenitellis  <simos@gnome.org>

	* configure.in: Added Tatar in ALL_LINGUAS.

2005-10-07  Nate Nielsen  <nielsen@memberwebs.com>

	* libgnomeui/gnome-password-dialog.c: (dialog_show_callback)
	Focus the first non-empty field. Bug #318026

2005-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Require libgnome 2.13.0, and require libgnome
	and libbonobo 2.13.0 and glib 2.8.0.
	* libgnomeui/gnome-client.c: (gnome_client_module_info_get),
	(gnome_client_goption_sm_client_id),
	(gnome_client_goption_sm_disable),
	(gnome_client_goption_sm_config_prefix):
	* libgnomeui/gnome-ui-init.c: (libgnomeui_module_info_get),
	(libgnomeui_arg_callback),